# opengl-learn-project

./: CMakeLists.txt  main.cpp
exercises/: triangles.cpp  triangles.h
getting_started/: firstWindow.cpp  firstWindow.h  triangle.cpp  triangle.h  window.cpp
getting_started/creating_a_window/: window.cpp  window.h
lessons/getting_started/coordinates/: coordinates.cpp  coordinates.h
lessons/getting_started/first_triangle/: triangle.cpp  triangle.h  triangle_tasks.cpp  triangle_tasks.h
lessons/getting_started/first_window/: firstWindow.cpp  firstWindow.h  first_window.cpp  first_window.h
lessons/getting_started/shaders/: shaders.cpp  shaders.h
lessons/getting_started/textures/: texture.cpp  texture.h
lib/: Shader.cpp  Shader.h  Window.cpp  Window.h
shaders/first_triangle/: shader2.frag
shaders/shaders/: shader.frag  shader.vert  shader2.frag  shader2.vert
shaders/textures/: shader.frag  shader.vert
shared/: files.cpp  files.h  shader.cpp  shader.h  window.cpp  window.h
